Fixing tagline font size and margin on small screens

--- a/_sass/global.sass
+++ b/_sass/global.sass
@@ -47,7 +47,7 @@ pre
   overflow-x: scroll
 
 .main-nav
-  margin: 1em
+  margin: 1em 0
   text-align: center
 
   @include mq("small")
@@ -84,8 +84,8 @@ pre
     font-size: 1.5em
   
   @include mq("small")
-    font-size: 1.2em
-    margin-bottom: 2em
+    font-size: 1em
+    margin-bottom: 1em
 
   .big,
   .biggest
